--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,16 @@ node_js:
 script:
   - npm run packagr
 
+before_deploy:
+  - cd dist
+
 deploy:
   provider: npm
+  email: $NPM_EMAIL
   api_key:
     secure: $NPM_TOKEN
   skip_cleanup: true
   on:
+    repo: smnbbrv/ngx-mat-codemirror
     branch: master
     tags: true
