updated travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,8 @@ before_deploy:
 
 deploy:
   provider: npm
-  email: $NPM_EMAIL
-  api_key:
-    secure: $NPM_TOKEN
+  email: smnbbrv@npmjs.com
+  api_key: $NPM_TOKEN
   skip_cleanup: true
   on:
     tags: true
