--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,23 @@ node_js:
   - '8'
 
 script:
+  - npm run build
   - npm run packagr
 
 before_deploy:
-  - cd dist
+  - cd dist-lib
 
 deploy:
-  provider: npm
-  email: smnbbrv@npmjs.com
-  api_key: $NPM_TOKEN
-  skip_cleanup: true
-  on:
-    tags: true
+  - provider: npm
+    email: smnbbrv@npmjs.com
+    api_key: $NPM_TOKEN
+    skip_cleanup: true
+    on:
+      tags: true
+  - provider: pages
+    local-dir: ../dist-demo
+    skip-cleanup: true
+    github-token: $GITHUB_TOKEN
+    keep-history: true
+    on:
+      branch: master
