--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ deploy:
     on:
       tags: true
   - provider: pages
-    local-dir: ../dist-demo
+    local-dir: dist-demo
     skip-cleanup: true
     github-token: $GITHUB_TOKEN
     keep-history: true
