--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@angular/forms": ">=5.0.0",
     "@angular/cdk": ">=5.0.0",
     "@angular/material": ">=5.0.0",
-    "rxjs": ">=5.5.6"
+    "rxjs": ">=5.5.6",
+    "@types/codemirror": ">=0.0.55"
   },
   "devDependencies": {
     "@angular/animations": "^5.2.0",
