--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@angular/animations": "^5.2.0",
     "@angular/cdk": ">=5.0.0",
-    "@angular/cli": "~1.7.2",
+    "@angular/cli": "^6.2.9",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/compiler-cli": "^5.2.0",
