--- a/package.json
+++ b/package.json
@@ -27,29 +27,26 @@
   },
   "peerDependencies": {
     "codemirror": ">=5.0.0",
-    "@angular/core": ">=5.0.0",
-    "@angular/forms": ">=5.0.0",
     "@angular/cdk": ">=5.0.0",
     "@angular/material": ">=5.0.0",
-    "rxjs": ">=5.5.6",
     "@types/codemirror": ">=0.0.55"
   },
   "devDependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^6.1.10",
     "@angular/cdk": ">=5.0.0",
     "@angular/cli": "^6.2.9",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/core": "^5.2.0",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/core": "^6.1.10",
     "@angular/flex-layout": "^6.0.0-beta.18",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
     "@angular/material": ">=5.0.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "@types/codemirror": "0.0.55",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
@@ -67,10 +64,13 @@
     "ng-packagr": "^2.2.0",
     "normalize.css": "^8.0.0",
     "protractor": "~5.1.2",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.6.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3",
+    "typescript": "~2.9.2",
     "zone.js": "^0.8.19"
+  },
+  "dependencies": {
+    "rxjs-compat": "^6.0.0-rc.0"
   }
 }
