--- a/angular.json
+++ b/angular.json
@@ -25,11 +25,11 @@
             ],
             "styles": [
               "src/styles.css",
-              "../node_modules/normalize.css/normalize.css",
-              "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "../node_modules/codemirror/lib/codemirror.css",
-              "../node_modules/codemirror/theme/neat.css",
-              "../node_modules/codemirror/theme/eclipse.css"
+              "./node_modules/normalize.css/normalize.css",
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./node_modules/codemirror/lib/codemirror.css",
+              "./node_modules/codemirror/theme/neat.css",
+              "./node_modules/codemirror/theme/eclipse.css"
             ],
             "scripts": []
           },
