--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "@types/codemirror": ">=0.0.55"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.6.2",
     "@angular/animations": "^6.1.10",
-    "@angular/cdk": ">=5.0.0",
+    "@angular/cdk": "^6.4.7",
     "@angular/cli": "^6.2.9",
     "@angular/common": "^6.1.10",
     "@angular/compiler": "^6.1.10",
@@ -43,26 +44,26 @@
     "@angular/forms": "^6.1.10",
     "@angular/http": "^6.1.10",
     "@angular/language-service": "^6.1.10",
-    "@angular/material": ">=5.0.0",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^6.1.10",
     "@angular/platform-browser-dynamic": "^6.1.10",
     "@angular/router": "^6.1.10",
     "@types/codemirror": "0.0.55",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "codemirror": ">=5.0.0",
-    "core-js": "^2.4.1",
+    "@types/jasmine": "^2.8.17",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^6.0.118",
+    "codelyzer": "^4.5.0",
+    "codemirror": "^5.56.0",
+    "core-js": "^2.6.11",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^2.2.0",
-    "normalize.css": "^8.0.0",
+    "ng-packagr": "^2.4.5",
+    "normalize.css": "^8.0.1",
     "protractor": "~5.1.2",
     "rxjs": "^6.6.2",
     "ts-node": "~4.1.0",
