--- a/package.json
+++ b/package.json
@@ -32,27 +32,26 @@
     "@types/codemirror": ">=0.0.55"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/animations": "^7.2.16",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^7.3.7",
-    "@angular/cli": "^7.3.10",
-    "@angular/common": "^7.2.16",
-    "@angular/compiler": "^7.2.16",
-    "@angular/compiler-cli": "^7.2.16",
-    "@angular/core": "^7.2.16",
+    "@angular/cli": "^8.3.29",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/core": "^8.2.14",
     "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "^7.2.16",
-    "@angular/http": "^7.2.16",
-    "@angular/language-service": "^7.2.16",
+    "@angular/forms": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.16",
-    "@angular/platform-browser-dynamic": "^7.2.16",
-    "@angular/router": "^7.2.16",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@types/codemirror": "0.0.55",
     "@types/jasmine": "^2.8.17",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^6.0.118",
-    "codelyzer": "^4.5.0",
+    "codelyzer": "^5.0.1",
     "codemirror": "^5.56.0",
     "core-js": "^2.6.11",
     "jasmine-core": "~2.8.0",
@@ -62,14 +61,14 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^5.7.1",
+    "ng-packagr": "^5.4.0",
     "normalize.css": "^8.0.1",
     "protractor": "~5.1.2",
     "rxjs": "^6.6.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~3.2.4",
-    "zone.js": "^0.8.19"
+    "typescript": "~3.5.3",
+    "zone.js": "~0.9.1"
   },
   "dependencies": {
     "rxjs-compat": "^6.0.0-rc.0",
